[tool.poetry]
name = "quantrl"
version = "0.1.0"
description = ""
authors = ["quaere-verum <quaereverum2538@gmail.com>"]
readme = "README.md"
packages = [
    {include="quantrl", from="src"}
]

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.17.1"
scikit-learn = "^1.6.0"
river = "^0.22.0"
gymnasium = "<1.0.0"
setuptools = "^75.6.0"
matplotlib = "^3.10.0"
pyarrow = ">=9.0.0, <18.0.0"
torch = {version = "^2.5.1+cu118", source = "pytorch-gpu"}
numba = "^0.60.0"
tianshou = "^1.1.0"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
